--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/pup/webquest#readme",
   "dependencies": {
+    "browserify-middleware": "8.0.0",
+    "choo": "6.6.0",
+    "express": "4.16.2",
     "level": "2.0.1",
     "mkdirp": "0.5.1",
     "yargs": "10.0.3"
