get basic params from server

--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "sheetify": "6.2.0",
     "tachyons": "4.9.0",
     "yargs": "10.0.3"
+  },
+  "devDependencies": {
+    "choo-devtools": "2.2.0"
   }
 }
