--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/pup/webquest#readme",
   "dependencies": {
+    "boxen": "1.2.2",
     "browserify-middleware": "8.0.0",
     "choo": "6.6.0",
+    "dedent": "0.7.0",
     "express": "4.16.2",
     "level": "2.0.1",
     "mkdirp": "0.5.1",
+    "opn": "5.1.0",
     "sheetify": "6.2.0",
     "tachyons": "4.9.0",
     "yargs": "10.0.3"
