--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "choo": "6.6.0",
     "dedent": "0.7.0",
     "express": "4.16.2",
+    "fs-extra": "4.0.2",
     "level": "2.0.1",
     "mkdirp": "0.5.1",
     "opn": "5.1.0",
     "sheetify": "6.2.0",
+    "slugify": "1.2.6",
     "tachyons": "4.9.0",
     "yargs": "10.0.3"
   },
