use markdown-it, read frontmattwer

--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "dedent": "0.7.0",
     "express": "4.16.2",
     "fs-extra": "4.0.2",
+    "gray-matter": "3.1.1",
     "level": "2.0.1",
+    "markdown-it": "8.4.0",
     "mkdirp": "0.5.1",
     "opn": "5.1.0",
-    "remark": "8.0.0",
-    "remark-html": "6.0.1",
     "sheetify": "6.2.0",
     "slugify": "1.2.6",
     "tachyons": "4.9.0",
