move from express to http

--- a/package.json
+++ b/package.json
@@ -22,19 +22,18 @@
   },
   "homepage": "https://github.com/pup/webquest#readme",
   "dependencies": {
-    "body-parser": "1.18.2",
+    "bankai": "9.0.2",
     "boxen": "1.2.2",
-    "browserify-middleware": "8.0.0",
     "choo": "6.6.0",
     "dedent": "0.7.0",
-    "express": "4.16.2",
     "fs-extra": "4.0.2",
+    "get-body": "1.0.2",
     "gray-matter": "3.1.1",
     "level": "2.0.1",
     "markdown-it": "8.4.0",
     "mkdirp": "0.5.1",
     "opn": "5.1.0",
-    "sheetify": "6.2.0",
+    "server-router": "6.0.0",
     "slugify": "1.2.6",
     "tachyons": "4.9.0",
     "yargs": "10.0.3"
