--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "level": "2.0.1",
     "markdown-it": "8.4.0",
     "mkdirp": "0.5.1",
+    "nanobus": "4.3.1",
     "opn": "5.1.0",
     "server-router": "6.0.0",
     "slugify": "1.2.6",
