--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "bankai": "9.0.2",
     "boxen": "1.2.2",
     "choo": "6.6.0",
+    "country-emoji": "1.2.0",
     "dedent": "0.7.0",
     "fs-extra": "4.0.2",
     "get-body": "1.0.2",
     "gray-matter": "3.1.1",
+    "i18n-core": "3.2.0",
     "level": "2.0.1",
     "markdown-it": "8.4.0",
     "mkdirp": "0.5.1",
