--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "level": "2.0.1",
     "markdown-it": "8.4.0",
     "mkdirp": "0.5.1",
+    "mustache": "2.3.0",
     "nanobus": "4.3.1",
     "opn": "5.1.0",
     "server-router": "6.0.0",
