--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webquest",
-  "version": "0.1.1",
+  "version": "0.1.2-0",
   "description": "interactive coding workshops in the browser",
   "main": "index.js",
   "scripts": {
